argocd-deploy/back-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deploy-mounted2
spec:
  selector:
    matchLabels:
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
      - name: back-app
        image: 543059955777.dkr.ecr.ap-northeast-2.amazonaws.com/ljs2-ecr-test1:1.2
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts: # 생성한 볼륨 마운트
        - name: efs-volume
          mountPath: /usr/local/tomcat/webapps/ROOT/data/
        resources:
          requests:
            cpu: 200m
            memory: 200M
      volumes: # 위에서 생성한 PVC를 이용하여 볼륨 생성
      - name: efs-volume
        persistentVolumeClaim:
          claimName: efs-claim
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: tier
                operator: In
                values:
                - backend
            topologyKey: "kubernetes.io/hostname"
