argocd-deploy/back-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-svc
  namespace: deploy
spec:
  selector:
    tier: backend
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 31111
  type: NodePort
