argocd-deploy/back-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-ing
  namespace: deploy
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend: 
          service:
            name: back-svc
            port:
              number: 80
